@@ -55,6 +55,7 @@ import typing
 
 import rpy2.rinterface as ri
 import rpy2.rinterface_lib.callbacks
+import rpy2.rinterface_lib.openrlib
 import rpy2.robjects as ro
 import rpy2.robjects.packages as rpacks
 from rpy2.robjects.lib import grdevices
@@ -122,6 +123,32 @@ def _get_ipython_template_converter(template_converter=template_converter,
 def _get_converter(template_converter=template_converter):
     return Converter('ipython conversion',
                      template=template_converter)
+
+
+# TODO: Something like this could be part of the rpy2 API.
+def _print_deferred_warnings() -> None:
+    """Print R warning messages.
+
+    rpy2's default pattern add a prefix per warning lines.
+    This should be revised. In the meantime, we clean it
+    at least for the R magic.
+    """
+
+    with contextlib.ExitStack() as stack:
+        stack.enter_context(
+            rpy2.rinterface_lib.openrlib.rlock
+        )
+        stack.enter_context(
+            rpy2.rinterface_lib.callbacks.obj_in_module(
+                rpy2.rinterface_lib.callbacks,
+                '_WRITECONSOLE_EXCEPTION_LOG',
+                '%s')
+        )
+        try:
+            ro.r('.Internal(printDeferredWarnings())')
+        except (ri.embedded.RRuntimeError, ValueError):
+            # TODO: report this in a logger.
+            pass
 
 
 ipy_template_converter = _get_ipython_template_converter(template_converter,
@@ -382,12 +409,17 @@ class RMagics(Magics):
                 )
             try:
                 # Need the newline in case the last line in code is a comment.
-                value, visible = ro.r("withVisible({%s\n})" % code)
+                r_expr = ri.parse(code)
+                value, visible = ri.evalr_expr_with_visible(
+                    r_expr
+                )
             except (ri.embedded.RRuntimeError, ValueError) as exception:
                 # Otherwise next return seems to have copy of error.
                 warning_or_other_msg = self.flush()
                 raise RInterpreterError(code, str(exception),
                                         warning_or_other_msg)
+            finally:
+                _print_deferred_warnings()
             text_output = self.flush()
             return text_output, value, visible[0]
 
