@@ -8,6 +8,12 @@ New features
   an expression and return the visibility status of the
   value returned.
 
+Bugs fixed
+----------
+
+- "R magic" cells are now show R warnings at the end of the
+  evaluation of an R cell (#issue 226).
+
 
 Release 3.5.11
 ==============
